--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,6 +1,16 @@
 - clean: ['~']
 
 - link:
+    ~/.config/bspwm:
+        create: true
+        path: config/bspwm/
+    ~/.config/sxhkd:
+        create: true
+        path: config/sxhkd/
+    ~/.config/dunst:
+        create: true
+        path: config/dunst/
+    ~/.vim: vim/
     ~/.profile: profile
     ~/.bash_profile: bash_profile
     ~/.bashrc: bashrc
