Update kitty conf

--- a/private_dot_config/kitty/kitty.conf
+++ b/private_dot_config/kitty/kitty.conf
@@ -1,5 +1,8 @@
 map ctrl+v paste_from_clipboard
 
+background_opacity 0.975
+font_family	SF Mono Medium
+
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Frappe
